# service-mesh-agent

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  start-agent.sh
cmake/: FindLibuv.cmake
python_playgound/: test_dubbo_client.py  test_dubbo_pressure_async.py  test_split_decode.py
python_playgound/analysis/: time_series_analysis.py
python_playgound/inputs/: body0.txt  body1.txt
scripts/: create_docker_network.sh  install_libuv.sh  start_consumer.sh  start_etcd.sh  start_provider_large.sh  start_provider_medium.sh  start_provider_small.sh  stop_all.sh
src/: config.h  consumer_agent.c  consumer_agent.h  main.c  provider_agent.c  provider_agent.h
src/playground/: CMakeLists.txt  backup_tokenizer.md  test_fast_req_package.c  test_simd_instructions.c  test_split.c
src/utils/: atomic_integer.h  blockQueue.c  blockQueue.h  etcd.c  etcd.h  http_req_queue.c  http_req_queue.h  jvm_cmd.c  jvm_cmd.h  loadBalancer.c  loadBalancer.h  log.c  log.h  tokenizer.c  tokenizer.h  tokenizer_fast_req.c  utils.c  utils.h
src/utils/tests/: CMakeLists.txt  echo_server.c  jvm_gc.c  read_named_pipe.c  test_agent_cmd.txt  test_blockQueue.c  test_etcd.c  test_utils.c
